<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="170dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:gravity="center"
>

        <TextView
            android:id="@+id/tvPlayedGame"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/partie_s_joue_s"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvPlayedGameScore"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/score_partie_joue"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/best_score"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/meilleur_score"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/affichage_best_score"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/_0"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvPlayedGameLosedGame"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/partie_joue_sur_perdu"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvPlayedGameLosedGameScore"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/score_partie_joue_sur_perdu"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lastDailyChallengeWon"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/lastdailychallengewon"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvDateLastDailyChallengeWon"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/n_a"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnReturnMenu"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:text="@string/retour" />
</LinearLayout>