<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2048"
        android:textStyle="bold"
        android:textSize="50dp"
        android:layout_marginBottom="28dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/jouer"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="28dp" />

    <Button
        android:id="@+id/btnChallenge"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnDailyChallenge"
        android:layout_marginBottom="28dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:layout_marginBottom="28dp" />

    <Button
        android:id="@+id/btnOption"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/option"/>
        <!--android:backgroundTint="#950606"/> -->

    <Button
        android:id="@+id/highScoresButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="Meilleurs Scores"/>


</LinearLayout>
